# corpsystem-api

./: Dockerfile  pyproject.toml  pytest.ini  requirements.txt
config/: api.py  settings.py  urls.py
customers/: models.py  urls.py
customers/api/: api.py
customers/migrations/: 0001_initial.py
customers/schemas/: customers.py
customers/tests/: test_api.py
order/: admin.py  models.py  urls.py
order/api/: api.py
order/migrations/: 0001_initial.py
order/schemas/: order.py
products/: admin.py  models.py  urls.py
products/api/: api.py
products/migrations/: 0001_initial.py  0002_category_products_category.py  0003_alter_products_category.py  0004_alter_products_category.py
products/schemas/: products.py
sellers/: admin.py  models.py  urls.py
sellers/api/: api.py
sellers/migrations/: 0001_initial.py
sellers/schemas/: sellers.py
